tests/fixtures/invalid/list_notin_set.py
# Cannot use 'not in' with List[int] and Set[int]
x: bool = [1, 2, 3] not in {1, 2, 3}
